--- a/home16-android/src/main/res/layout/activity_simple_detail.xml
+++ b/home16-android/src/main/res/layout/activity_simple_detail.xml
@@ -12,24 +12,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/id"
+            app:layout_constraintTop_toTopOf="@+id/id"/>
 
 
     <TextView
-            android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="24dp" android:id="@+id/id" android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" tools:text="=ID"
+            app:layout_constraintStart_toStartOf="@+id/name"/>
     <TextView
             android:text="@string/name"
             android:layout_width="38dp"
             android:layout_height="19dp"
             android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/id"
-            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/name" app:layout_constraintTop_toTopOf="@+id/name"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -39,29 +40,29 @@
             app:layout_constraintTop_toBottomOf="@+id/id" app:layout_constraintStart_toEndOf="@+id/textView2"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginRight="8dp" tools:text="=Name"/>
     <Button
             android:text="@android:string/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/cancel"
             style="@style/Widget.AppCompat.Button"
-            app:layout_constraintEnd_toStartOf="@+id/delete" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toStartOf="@+id/delete" app:layout_constraintBottom_toBottomOf="@+id/delete"
+            android:layout_marginEnd="8dp"/>
     <Button
             android:text="@string/delete"
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/delete"
             style="@style/Widget.AppCompat.Button"
             app:layout_constraintEnd_toStartOf="@+id/ok"
-            android:layout_marginRight="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/ok"/>
     <Button
             android:text="@android:string/ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/ok"
             style="@style/Widget.AppCompat.Button"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginTop="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
