ДЗ-22 Добавлены пользователи и авторизация

--- a/home7/src/main/resources/templates/fragments.html
+++ b/home7/src/main/resources/templates/fragments.html
@@ -9,6 +9,8 @@
 <div th:fragment="menu">
     <a href="authors.html" th:href="@{/authors}">Авторы</a>
     <a href="books.html" th:href="@{/books}">Книги</a>
+    <a href="users.html" th:href="@{/users}">Пользователи</a>
+    <a href="/logout">Выход</a>
 </div>
 
 </body>
